--- a/HackerNewAPI/app/src/main/res/layout/card_post.xml
+++ b/HackerNewAPI/app/src/main/res/layout/card_post.xml
@@ -15,7 +15,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="5dp"
             android:weightSum="10">
@@ -51,7 +51,7 @@
 
             <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="8.5"
                 android:paddingLeft="5dp">
 
