--- a/HackerNewAPI/app/src/main/res/layout/home_content.xml
+++ b/HackerNewAPI/app/src/main/res/layout/home_content.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.dmspro.trieungo.hackernewapi.MainActivity"
     tools:showIn="@layout/activity_main">
@@ -11,7 +11,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:scrollbars="vertical" />
 
